# proclaim-it

./: Cargo.toml  README.md
proclaim-it/: Cargo.toml
proclaim-it-macros/: Cargo.toml
proclaim-it-macros/src/: lib.rs
proclaim-it/src/: lib.rs
proclaim-it/tests/: basic.rs
proclaim-it/tests/ui/fail/: no_operator.rs  no_operator.stderr
proclaim-it/tests/ui/pass/: comparisons.rs  contains.rs  equality.rs  field_access.rs  inequality.rs  is_variant.rs
