[package]
name = "proclaim-it-macros"
version = "0.0.1"
edition = "2024"
description = "Procedural macros for the proclaim-it assertion library"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
pretty_assertions = "1.4.1"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full"] }
